--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "build": "pnpm run build:node",
     "build:node": "rimraf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "cz": "git-cz",
-    "generate-eslintrc": "ts-node -P scripts/tsconfig.json -r tsconfig-paths/register scripts/generate-eslintrc.ts",
+    "generate-preview": "ts-node -P scripts/tsconfig.json -r tsconfig-paths/register scripts/generate-preview.ts",
     "lint": "pnpm run lint:js && pnpm run lint:md && pnpm run lint:prettier && pnpm run lint:knip && pnpm run lint:spelling",
-    "lint:js": "pnpm run build && pnpm run generate-eslintrc && eslint .",
-    "lint:js-fix": "pnpm run generate-eslintrc && eslint . --fix",
+    "lint:js": "pnpm run build && eslint .",
+    "lint:js-fix": "pnpm run build && eslint . --fix",
     "lint:knip": "pnpm run lint:knip:development && pnpm run lint:knip:production",
     "lint:knip:development": "knip --exclude exports",
     "lint:knip:production": "knip --production --strict --exclude exports",
@@ -80,6 +80,8 @@
     "@semantic-release/npm": "9.0.2",
     "@semantic-release/release-notes-generator": "10.0.3",
     "@types/eslint": "8.21.2",
+    "@types/eslint-config-prettier": "^6.11.0",
+    "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/node": "18.15.3",
     "@types/rollup-plugin-auto-external": "2.0.2",
     "@typescript-eslint/eslint-plugin": "5.55.0",
