--- a/package.json
+++ b/package.json
@@ -44,18 +44,22 @@
     "README.md"
   ],
   "scripts": {
-    "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "build": "pnpm run build:node",
+    "build:node": "rimraf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "cz": "git-cz",
-    "generate-eslintrc": "ts-node -P scripts/tsconfig.json -r tsconfig-paths/register scripts/generate-eslintrc.ts",
+    "generate-preview": "ts-node -P scripts/tsconfig.json -r tsconfig-paths/register scripts/generate-preview.ts",
     "lint": "pnpm run lint:js && pnpm run lint:md && pnpm run lint:prettier && pnpm run lint:knip && pnpm run lint:spelling",
-    "lint:js": "pnpm run build && pnpm run generate-eslintrc && eslint .",
-    "lint:js-fix": "pnpm run generate-eslintrc && eslint . --fix",
-    "lint:knip": "knip --config knip.jsonc --production --exclude exports",
+    "lint:js": "pnpm run build && eslint .",
+    "lint:js-fix": "pnpm run build && eslint . --fix",
+    "lint:knip": "pnpm run lint:knip:development && pnpm run lint:knip:production",
+    "lint:knip:development": "knip --exclude exports",
+    "lint:knip:production": "knip --production --strict --exclude exports",
     "lint:md": "markdownlint \"**/*.md\" --config=.markdownlint.json --ignore-path=.markdownlintignore",
     "lint:prettier": "prettier \"**/*\" --ignore-unknown --list-different",
     "lint:prettier-fix": "prettier \"**/*\" --ignore-unknown --write",
     "lint:spelling": "cspell \"**\" \".github/**/*\"",
     "prepare": "husky install",
+    "release": "semantic-release",
     "test": "echo no tests",
     "type-check": "tsc --noEmit"
   },
@@ -66,7 +70,6 @@
     "@commitlint/cli": "17.4.4",
     "@commitlint/config-conventional": "17.4.4",
     "@cspell/dict-cryptocurrencies": "3.0.1",
-    "@rebeccastevens/eslint-config": "1.5.3",
     "@rollup/plugin-commonjs": "24.0.1",
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-typescript": "11.0.0",
@@ -76,13 +79,15 @@
     "@semantic-release/github": "8.0.7",
     "@semantic-release/npm": "9.0.2",
     "@semantic-release/release-notes-generator": "10.0.3",
-    "@types/eslint": "8.21.1",
-    "@types/node": "18.15.2",
+    "@types/eslint": "8.21.2",
+    "@types/eslint-config-prettier": "^6.11.0",
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/node": "18.15.3",
     "@types/rollup-plugin-auto-external": "2.0.2",
     "@typescript-eslint/eslint-plugin": "5.55.0",
     "@typescript-eslint/parser": "5.55.0",
     "commitizen": "4.3.0",
-    "cspell": "6.29.0",
+    "cspell": "6.30.0",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.36.0",
     "eslint-config-prettier": "8.7.0",
@@ -90,7 +95,7 @@
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-functional": "5.0.6",
     "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsdoc": "40.0.2",
+    "eslint-plugin-jsdoc": "40.0.3",
     "eslint-plugin-markdown": "3.0.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-optimize-regex": "1.2.1",
@@ -99,7 +104,7 @@
     "eslint-plugin-sonarjs": "0.18.0",
     "eslint-plugin-unicorn": "46.0.0",
     "husky": "8.0.3",
-    "knip": "2.0.0-alpha.5",
+    "knip": "2.0.0-beta.0",
     "lint-staged": "13.2.0",
     "markdownlint-cli": "0.33.0",
     "prettier": "2.8.4",
@@ -107,11 +112,11 @@
     "rimraf": "4.4.0",
     "rollup": "3.19.1",
     "rollup-plugin-auto-external": "2.0.0",
-    "semantic-release": "20.1.1",
+    "semantic-release": "20.1.3",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.2",
     "tslib": "2.5.0",
-    "typescript": "4.9.5"
+    "typescript": "5.0.2"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "*",
