--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@clack/prompts": "^0.7.0",
     "eslint-flat-config-utils": "^0.3.0",
     "eslint-merge-processors": "^0.1.0",
-    "globals": "^15.8.0",
+    "globals": "^15.9.0",
     "local-pkg": "^0.5.0"
   },
   "devDependencies": {
@@ -65,15 +65,15 @@
     "@semantic-release/github": "10.1.3",
     "@semantic-release/npm": "12.0.1",
     "@semantic-release/release-notes-generator": "14.0.1",
-    "@stylistic/eslint-plugin": "2.6.0",
-    "@stylistic/eslint-plugin-migrate": "2.6.0",
-    "@types/node": "22.0.2",
+    "@stylistic/eslint-plugin": "2.6.1",
+    "@stylistic/eslint-plugin-migrate": "2.6.1",
+    "@types/node": "22.1.0",
     "@typescript-eslint/eslint-plugin": "8.0.0",
     "@typescript-eslint/parser": "8.0.0",
     "@typescript-eslint/utils": "8.0.0",
     "@unocss/eslint-plugin": "0.61.9",
     "commitizen": "4.3.0",
-    "cspell": "8.13.0",
+    "cspell": "8.13.1",
     "cz-conventional-changelog": "3.3.0",
     "deassert": "1.0.2",
     "eslint": "9.8.0",
@@ -81,9 +81,9 @@
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-format": "0.1.2",
-    "eslint-plugin-functional": "7.0.0-alpha.10",
+    "eslint-plugin-functional": "7.0.0-rc.1",
     "eslint-plugin-import-x": "3.1.0",
-    "eslint-plugin-jsdoc": "48.10.2",
+    "eslint-plugin-jsdoc": "48.11.0",
     "eslint-plugin-jsonc": "2.16.0",
     "eslint-plugin-markdown": "5.1.0",
     "eslint-plugin-n": "17.10.1",
@@ -110,12 +110,12 @@
     "prettier": "3.3.3",
     "prettier-plugin-packagejson": "2.5.1",
     "rimraf": "6.0.1",
-    "rollup": "4.19.1",
+    "rollup": "4.20.0",
     "rollup-plugin-ts": "3.4.5",
     "semantic-release": "24.0.0",
     "toml-eslint-parser": "0.10.0",
     "tsc-files": "1.1.4",
-    "tsx": "4.16.3",
+    "tsx": "4.16.5",
     "typescript": "5.4.5",
     "vue-eslint-parser": "9.4.3",
     "yaml-eslint-parser": "1.2.3"
