--- a/package.json
+++ b/package.json
@@ -49,8 +49,6 @@
   "dependencies": {
     "@antfu/install-pkg": "^0.3.3",
     "@clack/prompts": "^0.7.0",
-    "eslint-flat-config-utils": "^0.3.0",
-    "eslint-merge-processors": "^0.1.0",
     "globals": "^15.9.0",
     "local-pkg": "^0.5.0"
   },
@@ -80,10 +78,12 @@
     "deassert": "1.0.2",
     "eslint": "9.8.0",
     "eslint-config-prettier": "9.1.0",
+    "eslint-flat-config-utils": "0.3.0",
     "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-merge-processors": "0.1.0",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-format": "0.1.2",
-    "eslint-plugin-functional": "7.0.0-rc.1",
+    "eslint-plugin-functional": "7.0.0",
     "eslint-plugin-import-x": "3.1.0",
     "eslint-plugin-jsdoc": "48.11.0",
     "eslint-plugin-jsonc": "2.16.0",
