--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   ],
   "scripts": {
     "build": "pnpm run build:node",
-    "build:node": "rimraf dist && pnpm run typegen && rollup -c rollup.config.ts --configPlugin rollup-plugin-ts",
+    "build:node": "rimraf dist && pnpm run typegen && rollup -c rollup.config.ts --configPlugin typescript",
     "cz": "git-cz",
     "lint": "pnpm run typegen && pnpm run lint:eslint && pnpm run lint:md && pnpm run lint:knip && pnpm run lint:spelling && pnpm run lint:packages",
     "lint-fix": "pnpm run typegen && pnpm run lint:eslint-fix && pnpm run lint:packages-fix",
@@ -52,86 +52,91 @@
     "typecheck": "pnpm run typegen && tsc --noEmit -p tsconfig.build.json",
     "typegen": "tsx scripts/typegen.ts"
   },
+  "resolutions": {
+    "dts-bundle-generator": "9.2.1"
+  },
   "dependencies": {
-    "@antfu/install-pkg": "^0.3.3",
+    "@antfu/install-pkg": "^0.4.1",
     "@clack/prompts": "^0.7.0",
-    "globals": "^15.9.0",
+    "globals": "^15.10.0",
     "local-pkg": "^0.5.0"
   },
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
     "@commitlint/config-conventional": "19.5.0",
     "@cspell/dict-cryptocurrencies": "5.0.0",
-    "@eslint-react/eslint-plugin": "1.9.1",
-    "@eslint/compat": "1.1.1",
+    "@eslint-react/eslint-plugin": "1.14.3",
+    "@eslint/compat": "1.2.0",
     "@intlify/eslint-plugin-vue-i18n": "3.0.0",
+    "@rollup/plugin-typescript": "12.1.0",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "13.0.0",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "11.0.0",
     "@semantic-release/npm": "12.0.1",
     "@semantic-release/release-notes-generator": "14.0.1",
-    "@stylistic/eslint-plugin": "2.8.0",
-    "@stylistic/eslint-plugin-migrate": "2.8.0",
-    "@types/eslint": "9.6.0",
-    "@types/node": "22.2.0",
-    "@typescript-eslint/eslint-plugin": "8.8.0",
-    "@typescript-eslint/parser": "8.8.0",
-    "@typescript-eslint/utils": "8.8.0",
-    "@unocss/eslint-plugin": "0.63.1",
-    "@vitest/eslint-plugin": "1.0.1",
-    "commitizen": "4.3.0",
+    "@stylistic/eslint-plugin": "2.9.0",
+    "@stylistic/eslint-plugin-migrate": "2.9.0",
+    "@types/eslint": "9.6.1",
+    "@types/node": "22.7.5",
+    "@typescript-eslint/eslint-plugin": "8.8.1",
+    "@typescript-eslint/parser": "8.8.1",
+    "@typescript-eslint/utils": "8.8.1",
+    "@unocss/eslint-plugin": "0.63.3",
+    "@vitest/eslint-plugin": "1.1.7",
+    "commitizen": "4.3.1",
     "cspell": "8.14.4",
     "cz-conventional-changelog": "3.3.0",
-    "deassert": "1.1.0",
-    "eslint": "9.11.1",
+    "deassert": "1.3.2",
+    "eslint": "9.12.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-flat-config-utils": "0.3.0",
+    "eslint-flat-config-utils": "0.4.0",
     "eslint-formatting-reporter": "0.0.0",
-    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-import-resolver-typescript": "3.6.3",
     "eslint-merge-processors": "0.1.0",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-format": "0.1.2",
-    "eslint-plugin-functional": "7.0.1",
-    "eslint-plugin-i18next": "6.0.9",
-    "eslint-plugin-import-x": "4.1.1",
-    "eslint-plugin-jsdoc": "50.0.0",
+    "eslint-plugin-functional": "7.0.2",
+    "eslint-plugin-i18next": "6.1.0",
+    "eslint-plugin-import-x": "4.3.1",
+    "eslint-plugin-jsdoc": "50.3.1",
     "eslint-plugin-jsonc": "2.16.0",
     "eslint-plugin-markdown": "5.1.0",
-    "eslint-plugin-n": "17.10.2",
-    "eslint-plugin-no-only-tests": "3.1.0",
+    "eslint-plugin-n": "17.10.3",
+    "eslint-plugin-no-only-tests": "3.3.0",
     "eslint-plugin-optimize-regex": "1.2.1",
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-promise": "7.1.0",
     "eslint-plugin-react-hooks": "4.6.2",
-    "eslint-plugin-react-refresh": "0.4.9",
-    "eslint-plugin-readable-tailwind": "1.6.0",
+    "eslint-plugin-react-refresh": "0.4.12",
+    "eslint-plugin-readable-tailwind": "1.8.1",
     "eslint-plugin-regexp": "2.6.0",
-    "eslint-plugin-sonarjs": "2.0.2",
+    "eslint-plugin-sonarjs": "2.0.3",
     "eslint-plugin-tailwindcss": "3.17.4",
     "eslint-plugin-toml": "0.11.1",
-    "eslint-plugin-unicorn": "55.0.0",
-    "eslint-plugin-vue": "9.27.0",
+    "eslint-plugin-unicorn": "56.0.0",
+    "eslint-plugin-vue": "9.28.0",
     "eslint-plugin-yml": "1.14.0",
     "eslint-processor-vue-blocks": "0.1.2",
-    "eslint-typegen": "0.3.0",
-    "husky": "9.1.4",
-    "jiti": "2.1.0",
+    "eslint-typegen": "0.3.2",
+    "husky": "9.1.6",
+    "jiti": "2.3.3",
     "jsonc-eslint-parser": "2.4.0",
-    "knip": "5.27.2",
-    "lint-staged": "15.2.8",
-    "markdownlint": "0.34.0",
-    "markdownlint-cli": "0.41.0",
+    "knip": "5.33.1",
+    "lint-staged": "15.2.10",
+    "markdownlint": "0.35.0",
+    "markdownlint-cli": "0.42.0",
     "prettier": "3.3.3",
     "rimraf": "6.0.1",
-    "rollup": "4.22.4",
-    "rollup-plugin-ts": "3.4.5",
+    "rollup": "4.24.0",
+    "rollup-plugin-deassert": "1.3.0",
+    "rollup-plugin-dts-bundle-generator": "1.4.0",
     "semantic-release": "24.1.2",
-    "sort-package-json": "2.10.0",
+    "sort-package-json": "2.10.1",
     "toml-eslint-parser": "0.10.0",
     "tsc-files": "1.1.4",
-    "tsx": "4.17.0",
-    "typescript": "5.4.5",
+    "tsx": "4.19.1",
+    "typescript": "5.6.2",
     "vue-eslint-parser": "9.4.3",
     "yaml-eslint-parser": "1.2.3"
   },
@@ -304,7 +309,7 @@
       "optional": true
     }
   },
-  "packageManager": "pnpm@9.7.0",
+  "packageManager": "pnpm@9.12.1",
   "engines": {
     "node": ">=20.0.0"
   }
