--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "@antfu/install-pkg": "^1.0.0",
     "@clack/prompts": "^0.10.0",
     "globals": "^15.15.0",
-    "local-pkg": "^1.0.0"
+    "local-pkg": "^1.0.0",
+    "semver": "^7.7.1"
   },
   "devDependencies": {
     "@commitlint/cli": "19.7.1",
@@ -135,6 +136,7 @@
     "lint-staged": "15.4.3",
     "markdownlint-cli2": "0.17.2",
     "prettier": "3.5.1",
+    "prettier-plugin-tailwindcss": "0.6.11",
     "rimraf": "6.0.1",
     "rollup": "4.34.8",
     "rollup-plugin-deassert": "1.3.0",
@@ -185,6 +187,7 @@
     "eslint-processor-vue-blocks": "*",
     "jsonc-eslint-parser": "*",
     "prettier": "*",
+    "prettier-plugin-tailwindcss": "*",
     "sort-package-json": "*",
     "toml-eslint-parser": "*",
     "vue-eslint-parser": "*",
@@ -306,6 +309,9 @@
       "optional": true
     },
     "prettier": {
+      "optional": true
+    },
+    "prettier-plugin-tailwindcss": {
       "optional": true
     },
     "sort-package-json": {
