--- a/package.json
+++ b/package.json
@@ -65,89 +65,86 @@
     "typegen": "tsx scripts/typegen.ts"
   },
   "dependencies": {
-    "@antfu/install-pkg": "^1.0.0",
-    "@clack/prompts": "^0.10.0",
-    "globals": "^16.0.0",
-    "local-pkg": "^1.1.1",
-    "semver": "^7.7.1"
+    "@antfu/install-pkg": "^1.1.0",
+    "@clack/prompts": "^0.11.0",
+    "globals": "^16.3.0",
+    "local-pkg": "^1.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "@cspell/dict-cryptocurrencies": "5.0.4",
-    "@eslint-react/eslint-plugin": "1.49.0",
-    "@eslint/compat": "1.2.9",
+    "@eslint-react/eslint-plugin": "1.52.2",
+    "@eslint/compat": "1.3.1",
     "@intlify/eslint-plugin-vue-i18n": "4.0.1",
-    "@rollup/plugin-typescript": "12.1.2",
+    "@rollup/plugin-typescript": "12.1.4",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "13.0.1",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "11.0.2",
-    "@semantic-release/npm": "12.0.1",
+    "@semantic-release/github": "11.0.3",
+    "@semantic-release/npm": "12.0.2",
     "@semantic-release/release-notes-generator": "14.0.3",
-    "@stylistic/eslint-plugin": "4.2.0",
-    "@stylistic/eslint-plugin-migrate": "4.2.0",
+    "@stylistic/eslint-plugin": "5.1.0",
+    "@stylistic/eslint-plugin-migrate": "4.4.1",
     "@types/eslint": "9.6.1",
-    "@types/node": "22.15.17",
-    "@typescript-eslint/eslint-plugin": "8.26.0",
-    "@typescript-eslint/parser": "8.26.0",
-    "@typescript-eslint/utils": "8.26.0",
-    "@unocss/eslint-plugin": "66.0.0",
-    "@vitest/eslint-plugin": "1.1.44",
+    "@types/node": "22.16.0",
+    "@typescript-eslint/eslint-plugin": "8.35.1",
+    "@typescript-eslint/parser": "8.35.1",
+    "@typescript-eslint/utils": "8.35.1",
+    "@unocss/eslint-plugin": "66.3.2",
+    "@vitest/eslint-plugin": "1.3.4",
     "commitizen": "4.3.1",
-    "cspell": "8.19.3",
+    "cspell": "9.1.2",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "9.25.1",
+    "eslint": "9.30.1",
     "eslint-config-prettier": "10.1.5",
-    "eslint-flat-config-utils": "2.0.1",
+    "eslint-flat-config-utils": "2.1.0",
     "eslint-formatting-reporter": "0.0.0",
-    "eslint-import-resolver-typescript": "4.3.4",
+    "eslint-import-resolver-typescript": "4.4.4",
     "eslint-merge-processors": "2.0.0",
+    "eslint-plugin-better-tailwindcss": "3.4.3",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-format": "1.0.1",
-    "eslint-plugin-functional": "9.0.1",
+    "eslint-plugin-functional": "9.0.2",
     "eslint-plugin-i18next": "6.1.1",
-    "eslint-plugin-import-x": "4.11.1",
-    "eslint-plugin-jsdoc": "50.6.14",
-    "eslint-plugin-jsonc": "2.20.0",
+    "eslint-plugin-import-x": "4.16.1",
+    "eslint-plugin-jsdoc": "51.3.3",
+    "eslint-plugin-jsonc": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-markdown": "5.1.0",
-    "eslint-plugin-n": "17.18.0",
+    "eslint-plugin-n": "17.20.0",
     "eslint-plugin-no-only-tests": "3.3.0",
     "eslint-plugin-optimize-regex": "1.2.1",
-    "eslint-plugin-prettier": "5.4.0",
+    "eslint-plugin-prettier": "5.5.1",
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
-    "eslint-plugin-readable-tailwind": "2.1.1",
-    "eslint-plugin-regexp": "2.7.0",
-    "eslint-plugin-sonarjs": "3.0.2",
-    "eslint-plugin-tailwindcss": "3.18.0",
+    "eslint-plugin-regexp": "2.9.0",
+    "eslint-plugin-sonarjs": "3.0.4",
     "eslint-plugin-toml": "0.12.0",
     "eslint-plugin-unicorn": "59.0.1",
-    "eslint-plugin-vue": "10.1.0",
+    "eslint-plugin-vue": "10.3.0",
     "eslint-plugin-yml": "1.18.0",
     "eslint-processor-vue-blocks": "2.0.0",
-    "eslint-typegen": "2.2.0",
+    "eslint-typegen": "2.2.1",
     "husky": "9.1.7",
     "jiti": "2.4.2",
     "jsonc-eslint-parser": "2.4.0",
-    "knip": "5.55.1",
-    "lint-staged": "15.5.2",
-    "markdownlint-cli2": "0.18.0",
-    "prettier": "3.5.3",
-    "prettier-plugin-tailwindcss": "0.6.11",
+    "knip": "5.61.3",
+    "lint-staged": "16.1.2",
+    "markdownlint-cli2": "0.18.1",
+    "prettier": "3.6.2",
     "rimraf": "6.0.1",
-    "rollup": "4.40.2",
+    "rollup": "4.44.1",
     "rollup-plugin-deassert": "1.3.0",
     "rollup-plugin-dts-bundle-generator-2": "2.0.0",
-    "semantic-release": "24.2.3",
-    "sort-package-json": "3.2.1",
+    "semantic-release": "24.2.6",
+    "sort-package-json": "3.4.0",
     "toml-eslint-parser": "0.10.0",
     "tsc-files": "1.1.4",
-    "tsx": "4.19.4",
+    "tsx": "4.20.3",
     "typescript": "5.8.3",
-    "vue-eslint-parser": "10.1.3",
+    "vue-eslint-parser": "10.2.0",
     "yaml-eslint-parser": "1.3.0"
   },
   "peerDependencies": {
@@ -163,6 +160,7 @@
     "eslint-formatting-reporter": "*",
     "eslint-import-resolver-typescript": "*",
     "eslint-merge-processors": "*",
+    "eslint-plugin-better-tailwindcss": "*",
     "eslint-plugin-eslint-comments": "*",
     "eslint-plugin-format": "*",
     "eslint-plugin-functional": "*",
@@ -176,10 +174,8 @@
     "eslint-plugin-optimize-regex": "*",
     "eslint-plugin-prettier": "*",
     "eslint-plugin-promise": "*",
-    "eslint-plugin-readable-tailwind": "*",
     "eslint-plugin-regexp": "*",
     "eslint-plugin-sonarjs": "*",
-    "eslint-plugin-tailwindcss": "*",
     "eslint-plugin-toml": "*",
     "eslint-plugin-unicorn": "*",
     "eslint-plugin-vue": "*",
@@ -187,7 +183,6 @@
     "eslint-processor-vue-blocks": "*",
     "jsonc-eslint-parser": "*",
     "prettier": "*",
-    "prettier-plugin-tailwindcss": "*",
     "sort-package-json": "*",
     "toml-eslint-parser": "*",
     "vue-eslint-parser": "*",
@@ -228,6 +223,9 @@
       "optional": true
     },
     "eslint-merge-processors": {
+      "optional": true
+    },
+    "eslint-plugin-better-tailwindcss": {
       "optional": true
     },
     "eslint-plugin-eslint-comments": {
@@ -278,16 +276,10 @@
     "eslint-plugin-react-refresh": {
       "optional": true
     },
-    "eslint-plugin-readable-tailwind": {
-      "optional": true
-    },
     "eslint-plugin-regexp": {
       "optional": true
     },
     "eslint-plugin-sonarjs": {
-      "optional": true
-    },
-    "eslint-plugin-tailwindcss": {
       "optional": true
     },
     "eslint-plugin-toml": {
@@ -311,9 +303,6 @@
     "prettier": {
       "optional": true
     },
-    "prettier-plugin-tailwindcss": {
-      "optional": true
-    },
     "sort-package-json": {
       "optional": true
     },
@@ -327,7 +316,7 @@
       "optional": true
     }
   },
-  "packageManager": "pnpm@10.10.0",
+  "packageManager": "pnpm@10.12.4",
   "engines": {
     "node": ">=20.0.0"
   },
