--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "allowJs": false,
     "declaration": true,
-    "isolatedDeclarations": true,
+    // "isolatedDeclarations": true,
     "rootDir": "."
   },
   "include": [".", ".*"]
