--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RebeccaStevens/eslint-config-rebeccastevens"
+    "url": "git+https://github.com/RebeccaStevens/eslint-config-rebeccastevens.git"
   },
   "funding": [
     {
