--- a/package.json
+++ b/package.json
@@ -71,23 +71,24 @@
     "local-pkg": "^1.1.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "20.4.0",
-    "@commitlint/config-conventional": "20.4.0",
+    "@commitlint/cli": "20.4.2",
+    "@commitlint/config-conventional": "20.4.2",
     "@cspell/dict-cryptocurrencies": "5.0.5",
     "@eslint-react/eslint-plugin": "2.13.0",
     "@eslint/compat": "2.0.2",
+    "@eslint/markdown": "7.5.1",
     "@intlify/eslint-plugin-vue-i18n": "4.1.1",
     "@rollup/plugin-typescript": "12.3.0",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "13.0.1",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "12.0.3",
-    "@semantic-release/npm": "13.1.3",
+    "@semantic-release/github": "12.0.6",
+    "@semantic-release/npm": "13.1.4",
     "@semantic-release/release-notes-generator": "14.1.0",
     "@stylistic/eslint-plugin": "5.9.0",
     "@stylistic/eslint-plugin-migrate": "4.4.1",
     "@types/eslint": "9.6.1",
-    "@types/node": "22.19.11",
+    "@types/node": "25.3.0",
     "@typescript-eslint/eslint-plugin": "8.56.0",
     "@typescript-eslint/parser": "8.56.0",
     "@typescript-eslint/utils": "8.56.0",
@@ -95,7 +96,7 @@
     "@vitest/eslint-plugin": "1.6.9",
     "baseline-browser-mapping": "2.10.0",
     "commitizen": "4.3.1",
-    "cspell": "9.6.2",
+    "cspell": "9.6.4",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "9.39.3",
     "eslint-config-prettier": "10.1.8",
@@ -105,14 +106,13 @@
     "eslint-merge-processors": "2.0.0",
     "eslint-plugin-better-tailwindcss": "4.3.0",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-format": "1.3.1",
+    "eslint-plugin-format": "1.4.0",
     "eslint-plugin-functional": "9.0.2",
     "eslint-plugin-i18next": "6.1.3",
     "eslint-plugin-import-x": "4.16.1",
     "eslint-plugin-jsdoc": "62.7.0",
     "eslint-plugin-jsonc": "3.0.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-markdown": "5.1.0",
     "eslint-plugin-n": "17.24.0",
     "eslint-plugin-no-only-tests": "3.3.0",
     "eslint-plugin-optimize-regex": "1.2.1",
@@ -121,16 +121,16 @@
     "eslint-plugin-react-hooks": "7.0.1",
     "eslint-plugin-react-refresh": "0.5.0",
     "eslint-plugin-regexp": "3.0.0",
-    "eslint-plugin-sonarjs": "3.0.4",
+    "eslint-plugin-sonarjs": "4.0.0",
     "eslint-plugin-toml": "1.1.1",
-    "eslint-plugin-unicorn": "62.0.0",
+    "eslint-plugin-unicorn": "63.0.0",
     "eslint-plugin-vue": "10.8.0",
     "eslint-plugin-yml": "3.2.1",
     "eslint-processor-vue-blocks": "2.0.0",
     "eslint-typegen": "2.3.1",
     "husky": "9.1.7",
     "jiti": "2.6.1",
-    "jsonc-eslint-parser": "2.4.2",
+    "jsonc-eslint-parser": "3.1.0",
     "knip": "5.85.0",
     "lint-staged": "16.2.7",
     "markdownlint-cli2": "0.21.0",
@@ -149,6 +149,7 @@
     "yaml-eslint-parser": "2.0.0"
   },
   "peerDependencies": {
+    "@eslint/markdown": "*",
     "@stylistic/eslint-plugin": "*",
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
@@ -169,7 +170,6 @@
     "eslint-plugin-jsdoc": "*",
     "eslint-plugin-jsonc": "*",
     "eslint-plugin-jsx-a11y": "*",
-    "eslint-plugin-markdown": "*",
     "eslint-plugin-n": "*",
     "eslint-plugin-no-only-tests": "*",
     "eslint-plugin-optimize-regex": "*",
@@ -191,6 +191,9 @@
   },
   "peerDependenciesMeta": {
     "@eslint-react/eslint-plugin": {
+      "optional": true
+    },
+    "@eslint/markdown": {
       "optional": true
     },
     "@stylistic/eslint-plugin": {
@@ -251,9 +254,6 @@
       "optional": true
     },
     "eslint-plugin-jsx-a11y": {
-      "optional": true
-    },
-    "eslint-plugin-markdown": {
       "optional": true
     },
     "eslint-plugin-n": {
