--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "lint:yaml-fix": "eslint \"**/*.y?(a)ml\" --fix",
     "lint-fix": "pnpm run typegen && eslint --fix && pnpm run lint:md-fix && pnpm run lint:packages-fix",
     "prepare": "husky",
-    "release": "semantic-release",
+    "release": "npx --package semantic-release --package @semantic-release/changelog --package @semantic-release/commit-analyzer --package @semantic-release/git --package @semantic-release/github --package @semantic-release/npm --package @semantic-release/release-notes-generator semantic-release",
     "typecheck": "pnpm run typegen && pnpm run typecheck:root && pnpm run typecheck:src",
     "typecheck:root": "tsc -p ./tsconfig.json --noEmit",
     "typecheck:src": "tsc -p ./src/tsconfig.json --noEmit",
@@ -79,12 +79,6 @@
     "@eslint/markdown": "7.5.1",
     "@intlify/eslint-plugin-vue-i18n": "4.1.1",
     "@rollup/plugin-typescript": "12.3.0",
-    "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/commit-analyzer": "13.0.1",
-    "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "12.0.6",
-    "@semantic-release/npm": "13.1.4",
-    "@semantic-release/release-notes-generator": "14.1.0",
     "@stylistic/eslint-plugin": "5.9.0",
     "@stylistic/eslint-plugin-migrate": "4.4.1",
     "@types/eslint": "9.6.1",
@@ -139,7 +133,6 @@
     "rollup": "4.58.0",
     "rollup-plugin-deassert": "1.3.0",
     "rollup-plugin-dts-bundle-generator-2": "2.0.0",
-    "semantic-release": "25.0.3",
     "sort-package-json": "3.6.1",
     "toml-eslint-parser": "1.0.3",
     "tsc-files": "1.1.4",
